--- a/public/armada.css
+++ b/public/armada.css
@@ -505,9 +505,8 @@ card display - right side
 }
 
 .ship-card img {
-    height: 370px;
+    height: 840px;
     margin: 10px;
-
 }
 
 .card img:hover {
@@ -557,7 +556,7 @@ textarea {
 
 .selector-container {
     overflow: scroll;
-    height: 100vh;
+    height: 80vh;
 }
 
 /****************
@@ -565,6 +564,12 @@ Media Queries
 ****************/
 /* applies to screens 680 px and above (past mobile phone) */
 @media screen and (min-width: 680px) {
+    .ship-card img {
+        height: 400px;
+    }
+    .selector-container {
+        height: 100vh;
+    }
     .tablet-nav {
         display: block;
     }
