--- a/public/armada.css
+++ b/public/armada.css
@@ -301,7 +301,7 @@ selected fleet
 upgrade bar
 ************************/
 .upgrade-bar {
-    display: none;
+    display: block;
     padding-bottom: 5px;
 }
 
@@ -428,6 +428,70 @@ action bar
     font-size: 20px;
 }
 
+
+
+/************************
+crawl
+************************/
+.crawl-container {
+    width: 100%;
+    height: 100%;
+
+    overflow: hidden;
+}
+
+.fade {
+    position: relative;
+    width: 100%;
+    min-height: 60vh;
+    top: -25px;
+    background-image: linear-gradient(0deg, transparent, black 75%);
+    z-index: 1;
+}
+
+.star-wars {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    height: 800px;
+    color: #feda4a;
+    font-family: 'Pathway Gothic One', sans-serif;
+    font-size: 500%;
+    font-weight: 600;
+    letter-spacing: 6px;
+    line-height: 150%;
+    perspective: 400px;
+    text-align: justify;
+}
+
+.crawl {
+    position: relative;
+    top: 99999px;
+    transform-origin: 50% 100%;
+    animation: crawl 60s linear;
+}
+
+.crawl > .title {
+    font-size: 90%;
+    text-align: center;
+}
+
+.crawl > .title h1 {
+    margin: 0 0 100px;
+    text-transform: uppercase;
+}
+
+@keyframes crawl {
+    0% {
+        top: -100px;
+        transform: rotateX(20deg)  translateZ(0);
+    }
+    100% {
+        top: -6000px;
+        transform: rotateX(25deg) translateZ(-2500px);
+    }
+}
+
 /************************
 card
 ************************/
@@ -436,7 +500,7 @@ card display - right side
 ************************/
 .card-display {
     float: right;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.26), #000), url(images/home-page-background-1.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.05), #000), url(images/home-page-background-1.png);
     text-align: center;
     background-size: cover;
     height: 100vh;
