--- a/server/client/src/Components/css/Header.css
+++ b/server/client/src/Components/css/Header.css
@@ -6,3 +6,41 @@
 .header-container li:last-child {
     border: none;
 }
+.nav-links {
+    width: 100%;
+    /*margin-top: 2vh;*/
+}
+.nav-container {
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+.header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.nav-links li a {
+    font-size: 18px;
+}
+
+@media screen and (min-width: 480px) {
+    .header-container li {
+        padding: 0 5px;
+    }
+    .nav-links li a {
+        font-size: 18px;
+    }
+}
+
+@media screen and (min-width: 760px) {
+    .header-container li {
+        padding: 0 5px;
+    }
+}
+
+@media screen and (min-width: 950px) {
+    .header-container li {
+        padding: 0 15px;
+    }
+}
