--- a/server/client/public/grid.css
+++ b/server/client/public/grid.css
@@ -3,8 +3,8 @@
 
 .section {
 	clear: both;
-	padding: 0px;
-	margin: 0px;
+	padding: 0;
+	margin: 0;
 }
 
 /*  GROUPING  ============================================================================= */
@@ -20,6 +20,13 @@
 }
 .row:after {
     clear:both;
+}
+.content-container {
+	width: 100%;
+	padding-right: 15px;
+	padding-left: 15px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 /*  GRID COLUMN SETUP   ==================================================================== */
