--- a/server/client/src/Components/css/Header.css
+++ b/server/client/src/Components/css/Header.css
@@ -33,6 +33,10 @@
 .menu-holder {
     float: right;
 }
+.small-nav {
+    position: fixed;
+    width: 100%;
+}
 
 @media screen and (min-width: 480px) {
     .header-container li {
@@ -53,4 +57,34 @@
     .header-container li {
         padding: 0 15px;
     }
+}
+
+.icon {
+    float: right;
+    background: #a6a6a6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 22px;
+}
+#mobileLinks {
+    display: block !important;
+    width: 40%;
+    float: right;
+    background-color: black;
+    padding: 0;
+    transition: all 0.4s;
+    height: 0;
+
+}
+#mobileLinks-hidden {
+    height: 0;
+    padding: 0;
+}
+#mobileLinks li {
+    margin: 30px 0;
+}
+.mobile-header-cont {
+    height: 70px;
+    background-color: black;
 }
