--- a/server/client/src/Components/css/Header.css
+++ b/server/client/src/Components/css/Header.css
@@ -32,7 +32,9 @@
 }
 .menu-holder {
     float: right;
+    width: 40%;
 }
+
 .small-nav {
     position: fixed;
     width: 100%;
@@ -87,4 +89,6 @@
 .mobile-header-cont {
     height: 70px;
     background-color: black;
+    position: relative;
+    z-index: 100;
 }
