--- a/server/client/src/Components/css/Left.css
+++ b/server/client/src/Components/css/Left.css
@@ -1,8 +1,7 @@
 .selector-container {
-    height: 0vh;
+    width: 30%;
 }
-@media screen and (min-width: 680px) {
-    .selector-container {
-        height: 80vh;
-    }
+#ship-button {
+    background-color: white;
+    border: 1px solid #a0a0a0;
 }
