--- a/server/client/src/Components/css/Profile.css
+++ b/server/client/src/Components/css/Profile.css
@@ -3,6 +3,9 @@
     box-shadow: 5px 5px 10px rgba(0,0,0,0.3);
     border: 1px solid gainsboro;
     padding: 10px;
+    height: 100px;
+    display: flex;
+    align-items: center;
 }
 .display-ship {
     margin: 10px 0;
@@ -19,15 +22,19 @@
     right: 20px;
 }
 .back-container button {
-    background-color: blue;
+    background-color: #3b91d3;
     color: white;
     /*padding: 20px;*/
     border-radius: 50%;
     box-shadow: 5px 5px 10px rgba(0,0,0,0.3);
     border: none;
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     font-size: 25px;
+}
+.back-container:active {
+    transform: scale(0.9);
+    color: #00009e;
 }
 .display-upgrade {
 
@@ -35,8 +42,6 @@
 .ship-col {
     display: flex;
     justify-content: center;
-    width: 23.8%;
-
 }
 .upgrade-col {
 
@@ -50,10 +55,59 @@
 }
 
 .display-ship-img {
-    height: 60px;
+    height: 25px;
+    border-radius: 5px;
     overflow: hidden;
     /*clip-path: polygon(0 0, 100% 0%, 100% 30%, 0 30%);*/
 }
 .display-ship-img img {
-    height: 100px;
+    height: 120px;
+    border-radius: 5px;
+    clip-path: circle(50% at 50% 50%);
+}
+.jumbotron h1 {
+    padding-top: 5%;
+    margin-top: 0;
+}
+.disp-fleet-name {
+    float: left;
+    width: 25%;
+}
+.disp-buttons {
+    float: left;
+    width: 75%;
+    display: flex;
+    justify-content: flex-end;
+}
+.buttons-cont button {
+    margin-left: 35px;
+    box-shadow: 3px 3px 6px rgba(0,0,0,0.3);
+    border: none;
+}
+#delete-button {
+    background-color: red;
+    color: white;
+    font-size: 19px;
+    padding: 12px;
+}
+#show-button {
+    background-color: #3b91d3;
+    color: white;
+    font-size: 16px;
+    padding: 15px;
+
+}
+.fleet-name-display {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.delete-button-mobile button{
+    background-color: red;
+    color: white;
+    font-size: 19px;
+    padding: 12px;
+}
+#mobile-delete-button {
+    margin-left: 5px;
 }
