--- a/server/client/src/Components/css/ActionButtons.css
+++ b/server/client/src/Components/css/ActionButtons.css
@@ -56,6 +56,8 @@
     opacity: 0;
     transition: all 0.4s ease-in-out;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
 }
 .objective-selector-container {
     transition: all 0.6s ease-in-out;
