--- a/server/client/src/Components/css/Header.css
+++ b/server/client/src/Components/css/Header.css
@@ -63,32 +63,63 @@
 
 .icon {
     float: right;
-    background: #a6a6a6;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 22px;
 }
-#mobileLinks {
-    display: block !important;
-    width: 40%;
-    float: right;
-    background-color: black;
-    padding: 0;
-    transition: all 0.4s;
-    height: 0;
+.icon i {
+    color: whitesmoke;
+    /*padding: 20px;*/
+    text-decoration: none;
+    font-size: 25px;
+    display: block;
+}
 
-}
-#mobileLinks-hidden {
-    height: 0;
-    padding: 0;
-}
-#mobileLinks li {
-    margin: 30px 0;
-}
+
 .mobile-header-cont {
     height: 70px;
     background-color: black;
     position: relative;
     z-index: 100;
+}
+
+.mobile-links {
+    transition: all 0.4s;
+    display: flex;
+    justify-content: flex-end;
+    height: 0;
+    width: 100%;
+}
+.mobile-links a {
+    color: white;
+    margin: 15px;
+    font-family: "Fjalla One", sans-serif;
+    font-size: 25px;
+}
+.show-mobile-nav {
+    height: 300px;
+}
+.mobile-nav-ul {
+    background-color: black;
+    width: 60%;
+    float: right;
+}
+.mobile-nav-ul li {
+    margin: 40px 0;
+}
+.name-cont {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.ion-chevron-down {
+    transition: all 0.5s ease-in-out;
+}
+.rotate {
+    transform: rotate(180deg);
+}
+.long-ul {
+    height: ;
 }
