fixed the functionality for showing / hiding mobile displays

--- a/server/client/src/Components/css/ActionButtons.css
+++ b/server/client/src/Components/css/ActionButtons.css
@@ -80,3 +80,9 @@
 .rotate {
     transform: rotate(180deg);
 }
+@media screen and (min-width: 680px){
+    .toggle-selector-main {
+        display: none !important;
+    }
+}
+
