--- a/server/client/src/Components/css/Left.css
+++ b/server/client/src/Components/css/Left.css
@@ -23,3 +23,9 @@
 #fleet-total {
     font-size: 20px;
 }
+@media screen and (min-width: 690px){
+    #fleet-total,
+    .points-display {
+        font-size: 16px;
+    }
+}
