--- a/server/client/src/Components/css/Mobile.css
+++ b/server/client/src/Components/css/Mobile.css
@@ -1,7 +1,7 @@
 .desktop {
     display: none;
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 800px) {
     .mobile {
         display: none;
     }
@@ -60,8 +60,11 @@
 }
 #max-points-label {
     font-size: 15px;
+    margin-right: 8px;
 }
 .current-points {
     font-size: 15px;
+    width: 50%;
 }
+
 
